--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android Warehouse</string>
+    <string name="text_holder_demo">Posible Demo</string>
 </resources>
