Servicios con Retrofit, carga de imagenes via URL con Glide y cat API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
 
     <string name="title_activity_simple_camera">Simple Camera Demo</string>
     <string name="bt_take_picture">Tomar Foto</string>
+    <string name="bt_cat_request">Dame una buena foto de gatitos</string>
 </resources>
